Use px for font-size to fix bugs on firefox

--- a/source/_css/modules/_highlight.scss
+++ b/source/_css/modules/_highlight.scss
@@ -4,7 +4,6 @@ figure.highlight {
     margin:         10px 0;
     border-radius:  3px;
     overflow:       hidden;
-    font-size:      $font-size-small;
     line-height:    1.1em;
     color:          #333;
     font-family:    Menlo;
@@ -23,6 +22,7 @@ figure.highlight {
     }
     // Meta bar
     figcaption {
+        font-size: 12px;
         padding:       10px 15px;
         margin:        0;
         background:    #f7f7f7;
@@ -42,7 +42,7 @@ figure.highlight {
 
         .line {
             height:    20px;
-            font-size: 1.35em;
+            font-size: 13.5px;
             color:     $font-color-light;
         }
     }
@@ -55,7 +55,7 @@ figure.highlight {
         .line {
             height:       20px;
             padding-left: 5px;
-            font-size:    1.3em;
+            font-size:    13px;
 
         }
     }
